feat: add all table controller and make it functional and 100% working, and fix some error from the past
